# onshape-robotics-toolkit

./: .gitignore  .release-please-config.json  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Makefile  ORTK.yaml  README.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: postCreateCommand.sh
.github/actions/setup-uv-env/: action.yml
.github/workflows/: deploy-docs.yml  main.yml  on-release-main.yml  release-please.yml
api/assembly/: index.html
api/connect/: index.html
api/document/: index.html
api/element/: index.html
api/geometry/: index.html
api/graph/: index.html
api/joint/: index.html
api/link/: index.html
api/log/: index.html
api/mass/: index.html
api/mesh/: index.html
api/parse/: index.html
api/robot/: index.html
api/urdf/: index.html
api/utilities/: index.html
api/variable/: index.html
contributing/: index.html
developing/: index.html
docs/: cad-assembly-system.md  cli-reference.md  contributing.md  developing.md  getting-started.md  index.md  keynamer-system.md  kinematic-graph-migration.md  kinematic-graph-subassembly-mates.md  kinematic-graph-troubleshooting.md  kinematic-tree-migration.md  kinematic-tree-subassembly-mates.md  kinematic-tree-troubleshooting.md  migration-guide.md
docs/tutorials/: edit.md  export.md
examples/: rust_test.py
examples/bike/: main.py
examples/coordinates/: README.md  main.py
examples/edit/: main.py
examples/export/: advanced_rust_parsing.py  enhanced_rs_main.py  main.py  rs_main.py  rust_urdf_export.py  simple_urdf_export.py
examples/patterns/: main.py
examples/profiling/: api_call_tracker.py  clean_benchmark.py  plot_results.py  plotter.py  quick_profile.py  run_baseline_analysis.py  run_profiling.py  simple_baseline.py  test_assemblies.py  test_profiling.py  workflow_profiler.py
examples/simulation/: controllers.py  explore.py  main.py  mods.py  transformations.py
getting-started/: index.html
onshape_api/: connect.py  graph.py  log.py  mesh.py
onshape_api/data/: preprocess.py
onshape_api/models/: assembly.py  document.py  element.py  link.py  mass.py  variable.py
onshape_robotics_toolkit/: __init__.py  __main__.py  config.py  connect.py  graph.py  log.py  mesh.py  parse.py  robot.py  urdf.py
onshape_robotics_toolkit/cli/: __init__.py  assembly.py  config.py  export.py  graph.py  main.py  robot.py  utils.py  variables.py
onshape_robotics_toolkit/formats/: mjcf.py
onshape_robotics_toolkit/models/: assembly.py  geometry.py  joint.py  link.py
onshape_robotics_toolkit/utilities/: helpers.py
search/: search_index.json
src/: client.rs  endpoint.rs  endpoints.rs  error.rs  lib.rs  model.rs  params.rs  utils.rs
src/onshape_robotics_toolkit/: __init__.py  connect.py  graph.py  log.py  mesh.py  native.pyi  parse.py  robot.py  urdf.py
src/onshape_robotics_toolkit/data/: preprocess.py
src/onshape_robotics_toolkit/models/: assembly.py  document.py  element.py  geometry.py  joint.py  link.py  mass.py  mjcf.py  variable.py
src/onshape_robotics_toolkit/utilities/: helpers.py
src/parse/: async_fetcher.rs  cache.rs  geometry.rs  high_level_api.rs  instances.rs  mates.rs  mod.rs  models.rs
tests/: README.md  conftest.py  test_assets.py  test_cad.py  test_cad_document.py  test_config.py  test_kinematic_graph.py  test_kinematic_tree.py  test_lookups.py  test_mate_connectors.py  test_pathkey.py  test_robot.py  test_subassemblies.py
tests/cli/: test_cli_basic.py  test_config_commands.py
tests/data/: assembly_expected.urdf
tutorials/edit/: index.html
tutorials/export/: index.html
