[package]
name = "onshape_robotics_toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "native"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
rand = "0.8"
http = "1.3.1"
serde_urlencoded = "0.7.1"
reqwest = "0.12.22"
