[package]
name = "onshape-robotics-toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "onshape_robotics_toolkit_native"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "api_counter_demo"
path = "examples/api_counter_demo.rs"

[[example]]
name = "secure_client_demo"
path = "examples/secure_client_demo.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
bytes = "1.0"
http = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
async-trait = "0.1"
httpdate = "1.0"
derive_builder = "0.12"
dotenv = "0.15"
