[package]
name = "onshape-robotics-toolkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "onshape_robotics_toolkit_native"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "api_counter_demo"
path = "examples/api_counter_demo.rs"

[[example]]
name = "secure_client_demo"
path = "examples/secure_client_demo.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
http = "1.1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
bytes = "1.7"
httpdate = "1.0"
dotenv = "0.15"
derive_builder = "0.20"
async-trait = "0.1"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
uuid = { version = "1.0", features = ["v4", "v5"] }
futures = "0.3"
log = "0.4"
rand = "0.8"
once_cell = "1.19"
fastrand = "2.0"
